--- a/simulate_selected_neurons.ipynb
+++ b/simulate_selected_neurons.ipynb
@@ -2,27 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pickle\n",
+    "from datetime import datetime\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import navis\n",
     "import navis.interfaces.neuprint as neu\n",
-    "from neuprint import Client, fetch_neurons, fetch_skeleton, fetch_mean_synapses, attach_synapses_to_skeleton, fetch_simple_connections, fetch_synapse_connections,fetch_synapses\n",
+    "from neuprint import Client, fetch_neurons, fetch_mean_synapses, fetch_synapse_connections, fetch_synapses,fetch_simple_connections\n",
     "from neuprint import NeuronCriteria as NC, SynapseCriteria as SC\n",
     "\n",
-    "from NeuronPassiveModel import NeuronPassiveModel"
+    "from NeuronPassiveModel import NeuronPassiveModel, NeuronInputSampler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,10 +34,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "nid = 21001\n",
+    "sampler = NeuronInputSampler(neuron_id=nid, min_weight=5)\n",
+    "sampler.sample_input_site(n_samples=5)\n",
+    "sampler.save_injection_sites('test_dataset/LC14_21001_injection_sites.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scan of stim durations\n",
+    "default_stim_duration = 10\n",
+    "stim_durations = [5, 10, 20, 40]\n",
+    "\n",
+    "# scan of Ra, cm and g_pas\n",
+    "Ra_list = [100, 200, 400]\n",
+    "cm_list = [0.5, 1.0, 2.0]\n",
+    "g_pas_list = [0.05, 0.1, 0.2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#swc_file = \"test_dataset/Dm9_27045_skeleton_instance.swc\"\n",
     "swc_file = \"test_dataset/LC14_21001_skeleton_instance.swc\"\n",
     "\n",
     "simu_config = {\n",
@@ -45,379 +75,68 @@
     "    'g_pas': 0.1 * 1e-3, # Passive membrane conductance in S/cm²\n",
     "    'e_pas': -65, # Reversal potential for the passive current in mV\n",
     "    'dt': 0.25, # Time step for the simulation in ms\n",
-    "    'simulation_length': 100, # Simulation length in ms\n",
+    "    'simulation_length': 1000, # Simulation length in ms\n",
     "    'injected_current': 0.05, # Amplitude of the injected current (nA)\n",
     "    'stim_duration': 10, # Duration of the current injection (ms)\n",
     "    'stim_start': 20, # Delay before the current injection (ms)\n",
-    "}\n",
-    "\n",
-    "npm = NeuronPassiveModel(swc_file, simu_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_most_important_column_coords(nid, roi_info:dict):\n",
-    "    # for a given neuron, figure out a column with the most input\n",
-    "    per_column_input = {}\n",
-    "    for k, v in roi_info.items():\n",
-    "        if '_col_' in k:\n",
-    "            if 'post' in v.keys():\n",
-    "                per_column_input[k] = v['post']\n",
-    "\n",
-    "    # sort the columns by the number of inputs\n",
-    "    sorted_columns = {k: v for k, v in sorted(per_column_input.items(), key=lambda item: item[1], reverse=True)}\n",
-    "    most_input_column = list(sorted_columns.keys())[0]\n",
-    "\n",
-    "    # fetch the mean synapses in this column\n",
-    "    mean_synapses_df = fetch_mean_synapses(nid, SC(type='post', rois=most_input_column, primary_only=False))\n",
-    "    return mean_synapses_df[['x', 'y', 'z']].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nid = 21001\n",
-    "neuron_df, roi_conn_df = fetch_neurons(nid) \n",
-    "roi_Info = neuron_df.iloc[0]['roiInfo']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "most_important_column_coords = get_most_important_column_coords(nid, roi_Info)"
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ykhao/Documents/ASAP7_draft/FlyNeuronSimulator/NeuronPassiveModel.py:47: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  dist = np.sqrt((x - injection_point[0])**2 + (y - injection_point[1])**2 + (z - injection_point[2])**2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "npm.find_closest_sec(most_important_column_coords)\n",
-    "npm.current_injection_process(injected_current=simu_config['injected_current'], stim_duration=simu_config['stim_duration'], stim_start=simu_config['stim_start'])\n",
-    "npm.post_processing()"
+    "for stim_duration in stim_durations:\n",
+    "    simu_config['stim_duration'] = stim_duration\n",
+    "    print(simu_config['stim_duration'])\n",
+    "    npm = NeuronPassiveModel(swc_file, simu_config)\n",
+    "\n",
+    "    for i in range(5):\n",
+    "        npm.find_closest_sec(sampler.injection_site_coords[i])\n",
+    "        npm.current_injection_process()\n",
+    "        npm.post_processing()\n",
+    "        #npm.plot_results('test_dataset/Dm9_27045_results.png')\n",
+    "        time_stamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "        npm.save_results('test_dataset/Duration_LC14_21001_results_injection_{}_{}.pkl'.format(i, time_stamp))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "npm.plot_results('test_dataset/LC14_21001_results.png')"
+    "# now sample all the combinations of Ra, cm, and g_pas\n",
+    "\n",
+    "# Ra_list = [50, 100, 200]\n",
+    "# cm_list = [0.5, 1.0, 2.0]\n",
+    "# g_pas_list = [0.05, 0.1, 0.2]\n",
+    "simu_config['stim_duration'] = default_stim_duration\n",
+    "for Ra in Ra_list:\n",
+    "    for cm in cm_list:\n",
+    "        for g_pas in g_pas_list:\n",
+    "            simu_config['Ra'] = Ra\n",
+    "            simu_config['cm'] = cm\n",
+    "            simu_config['g_pas'] = g_pas * 1e-3 # convert to S/cm^2\n",
+    "            npm = NeuronPassiveModel(swc_file, simu_config)\n",
+    "            for i in range(5):\n",
+    "                npm.find_closest_sec(sampler.injection_site_coords[i])\n",
+    "                npm.current_injection_process()\n",
+    "                npm.post_processing()\n",
+    "                #npm.plot_results('test_dataset/Dm9_27045_results.png')\n",
+    "                time_stamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "                npm.save_results('test_dataset/RC_LC14_21001_results_injection_{}_{}.pkl'.format(i, time_stamp))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "npm.save_results('test_dataset/LC14_21001_results.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bodyId</th>\n",
-       "      <th>instance</th>\n",
-       "      <th>type</th>\n",
-       "      <th>pre</th>\n",
-       "      <th>post</th>\n",
-       "      <th>downstream</th>\n",
-       "      <th>upstream</th>\n",
-       "      <th>size</th>\n",
-       "      <th>status</th>\n",
-       "      <th>statusLabel</th>\n",
-       "      <th>...</th>\n",
-       "      <th>mcnsSerial</th>\n",
-       "      <th>flywireId</th>\n",
-       "      <th>predictedNt</th>\n",
-       "      <th>dimorphism</th>\n",
-       "      <th>totalNtPredictions</th>\n",
-       "      <th>otherNtReference</th>\n",
-       "      <th>exitNerve</th>\n",
-       "      <th>itoleeHl</th>\n",
-       "      <th>inputRois</th>\n",
-       "      <th>outputRois</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>LC14b_R</td>\n",
-       "      <td>LC14b</td>\n",
-       "      <td>665</td>\n",
-       "      <td>1884</td>\n",
-       "      <td>5984</td>\n",
-       "      <td>1884</td>\n",
-       "      <td>1102439435</td>\n",
-       "      <td>Traced</td>\n",
-       "      <td>Roughly traced</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>unclear</td>\n",
-       "      <td>None</td>\n",
-       "      <td>21</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[LO(L), LO(R), LOP(L), LO_R_col_13_10, LO_R_co...</td>\n",
-       "      <td>[LO(L), LO(R), LOP(L), LO_R_col_16_06, LO_R_co...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 42 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   bodyId instance   type  pre  post  downstream  upstream        size  \\\n",
-       "0   21001  LC14b_R  LC14b  665  1884        5984      1884  1102439435   \n",
-       "\n",
-       "   status     statusLabel  ... mcnsSerial flywireId predictedNt dimorphism  \\\n",
-       "0  Traced  Roughly traced  ...       None      None     unclear       None   \n",
-       "\n",
-       "  totalNtPredictions otherNtReference  exitNerve itoleeHl  \\\n",
-       "0                 21             None       None     None   \n",
-       "\n",
-       "                                           inputRois  \\\n",
-       "0  [LO(L), LO(R), LOP(L), LO_R_col_13_10, LO_R_co...   \n",
-       "\n",
-       "                                          outputRois  \n",
-       "0  [LO(L), LO(R), LOP(L), LO_R_col_16_06, LO_R_co...  \n",
-       "\n",
-       "[1 rows x 42 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neuron_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bodyId</th>\n",
-       "      <th>type</th>\n",
-       "      <th>roi</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
-       "      <th>confidence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>post</td>\n",
-       "      <td>OL(R)</td>\n",
-       "      <td>25915</td>\n",
-       "      <td>37360</td>\n",
-       "      <td>33886</td>\n",
-       "      <td>0.881407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>post</td>\n",
-       "      <td>LO_R_layer_4</td>\n",
-       "      <td>25915</td>\n",
-       "      <td>37360</td>\n",
-       "      <td>33886</td>\n",
-       "      <td>0.881407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>post</td>\n",
-       "      <td>LO_R_col_16_09</td>\n",
-       "      <td>25915</td>\n",
-       "      <td>37360</td>\n",
-       "      <td>33886</td>\n",
-       "      <td>0.881407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>post</td>\n",
-       "      <td>LO(R)</td>\n",
-       "      <td>25915</td>\n",
-       "      <td>37360</td>\n",
-       "      <td>33886</td>\n",
-       "      <td>0.881407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>post</td>\n",
-       "      <td>OL(R)</td>\n",
-       "      <td>25166</td>\n",
-       "      <td>37946</td>\n",
-       "      <td>33257</td>\n",
-       "      <td>0.707322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6651</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>pre</td>\n",
-       "      <td>LO_R_layer_7</td>\n",
-       "      <td>26618</td>\n",
-       "      <td>35810</td>\n",
-       "      <td>30174</td>\n",
-       "      <td>0.922000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6652</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>pre</td>\n",
-       "      <td>OL(R)</td>\n",
-       "      <td>27647</td>\n",
-       "      <td>34445</td>\n",
-       "      <td>29454</td>\n",
-       "      <td>0.817000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6653</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>pre</td>\n",
-       "      <td>LO_R_col_17_07</td>\n",
-       "      <td>27647</td>\n",
-       "      <td>34445</td>\n",
-       "      <td>29454</td>\n",
-       "      <td>0.817000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6654</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>pre</td>\n",
-       "      <td>LO(R)</td>\n",
-       "      <td>27647</td>\n",
-       "      <td>34445</td>\n",
-       "      <td>29454</td>\n",
-       "      <td>0.817000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6655</th>\n",
-       "      <td>21001</td>\n",
-       "      <td>pre</td>\n",
-       "      <td>LO_R_layer_7</td>\n",
-       "      <td>27647</td>\n",
-       "      <td>34445</td>\n",
-       "      <td>29454</td>\n",
-       "      <td>0.817000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6656 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      bodyId  type             roi      x      y      z  confidence\n",
-       "0      21001  post           OL(R)  25915  37360  33886    0.881407\n",
-       "1      21001  post    LO_R_layer_4  25915  37360  33886    0.881407\n",
-       "2      21001  post  LO_R_col_16_09  25915  37360  33886    0.881407\n",
-       "3      21001  post           LO(R)  25915  37360  33886    0.881407\n",
-       "4      21001  post           OL(R)  25166  37946  33257    0.707322\n",
-       "...      ...   ...             ...    ...    ...    ...         ...\n",
-       "6651   21001   pre    LO_R_layer_7  26618  35810  30174    0.922000\n",
-       "6652   21001   pre           OL(R)  27647  34445  29454    0.817000\n",
-       "6653   21001   pre  LO_R_col_17_07  27647  34445  29454    0.817000\n",
-       "6654   21001   pre           LO(R)  27647  34445  29454    0.817000\n",
-       "6655   21001   pre    LO_R_layer_7  27647  34445  29454    0.817000\n",
-       "\n",
-       "[6656 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "synapses_df = fetch_synapses(NC(bodyId=21001), SC(rois=['LO(R)'], primary_only=False))\n",
-    "#synapses_df = synapses_df[(synapses_df['roi'] == 'LO(L)') & (synapses_df['type'] == 'pre')]\n",
+    "synapses_df = fetch_synapses(NC(bodyId=27045), SC(rois=['ME_R_col_20_30'], type='pre', primary_only=False))\n",
     "synapses_df"
    ]
   },
