slight modification for post analysis, added todo for masked analysis

--- a/simulate_selected_neurons.ipynb
+++ b/simulate_selected_neurons.ipynb
@@ -55,9 +55,12 @@
     "stim_durations = [5, 10, 20, 40]\n",
     "\n",
     "# scan of Ra, cm and g_pas\n",
-    "Ra_list = [100, 200, 400]\n",
-    "cm_list = [0.5, 1.0, 2.0]\n",
-    "g_pas_list = [0.05, 0.1, 0.2]\n"
+    "#Ra_list = [100, 200, 400]\n",
+    "#cm_list = [0.5, 1.0, 2.0]\n",
+    "#g_pas_list = [0.05, 0.1, 0.2]\n",
+    "Ra_list = [100, 150, 225]\n",
+    "g_pas_list = [0.05, 0.2]\n",
+    "# ref: https://www.jneurosci.org/content/29/19/6239.long table 1"
    ]
   },
   {
@@ -115,10 +118,10 @@
     "# g_pas_list = [0.05, 0.1, 0.2]\n",
     "simu_config['stim_duration'] = default_stim_duration\n",
     "for Ra in Ra_list:\n",
-    "    for cm in cm_list:\n",
+    "    #for cm in cm_list:\n",
     "        for g_pas in g_pas_list:\n",
     "            simu_config['Ra'] = Ra\n",
-    "            simu_config['cm'] = cm\n",
+    "            #simu_config['cm'] = cm\n",
     "            simu_config['g_pas'] = g_pas * 1e-3 # convert to S/cm^2\n",
     "            npm = NeuronPassiveModel(swc_file, simu_config)\n",
     "            for i in range(5):\n",
