--- a/simulate_selected_neurons.ipynb
+++ b/simulate_selected_neurons.ipynb
@@ -23,11 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_token = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6Imhhb3lrOTZAZ21haWwuY29tIiwibGV2ZWwiOiJub2F1dGgiLCJpbWFnZS11cmwiOiJodHRwczovL2xoMy5nb29nbGV1c2VyY29udGVudC5jb20vYS9BQ2c4b2NLOHVFb1Z0Q0U3RVJRRjVPY1ZhVTFTdHNWWGVuZ09oWUhURW56d2kwY3QzMEdBZHpNPXM5Ni1jP3N6PTUwP3N6PTUwIiwiZXhwIjoxODk2NzA3ODg1fQ.oa3ZPtTRwWwsQl-KS0BckN9oVWAqO2h1Y4ObjOweceI'  # client token from Janelia server\n",
+    "if os.path.exists('token.txt'):\n",
+    "    # load the client token from the txt file\n",
+    "    client_token = open('token.txt', 'r').read()\n",
+    "else:\n",
+    "    client_token = ''\n",
     "\n",
     "c = Client('neuprint.janelia.org', dataset='optic-lobe:v1.1', token=client_token)"
    ]
